Fixed Button display on mobile

--- a/components/Navbar/Navbar.module.css
+++ b/components/Navbar/Navbar.module.css
@@ -87,9 +87,9 @@
   box-shadow: 0 0 0 2px rgba(255, 255, 255, 0.5);
 }
 
-/* Sreens less than 720px */
+/* Screens less than 500px */
 @media (max-width: 500px) {
   .navConnect {
-    display: none !important;
+    display: flex !important;
   }
 }
